# mdbook-force-relative-links

./: .envrc  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
nix/: per-system.nix  rust.nix
src/: main.rs
test-books/book-1/: book.toml
test-books/book-1/src/: SUMMARY.md  chapter_1.md
test-books/book-1/src/chapter_2/: chapter_2.1.md  contains_absolute.md
